--- a/TODO
+++ b/TODO
@@ -6,6 +6,9 @@ zrobic readme (autorow i manual do obslugi)
 I grafae 
 
 Grafana ini podmieniajaca tamten hostanme zeby dzialalo na uczelni //skopiowac caly plik i usunac ; // dodac zmienan ip grafany 
+nie dziala apache/mysql
+nie wiem jak rysowac w tej grafanie niby juz baza jest zmienne tez ale nic sie nie rysuje 
+metrics se nie robia XDD
 Przygoduj serwer zbierający i wyświetlający powyższe statystyki
 Zapewnij dostęp z IP uczelni pod adresem {ip}:8080
 Przygotuj wykresy dla ilości aktualnie przetwarzanych requestów dla serwera „apache”
